<resources>
    <string name="app_name">SealTalk</string>
    <string name="main_customer">意见反馈</string>
    <string name="main_customer_xn">小能客服</string>
    <string name="private_chat">发起聊天</string>
    <string name="group_chat">创建群组</string>
    <string name="add_contacts">添加好友</string>
    <string name="set_privacy">隐私</string>
    <string name="set_rongcloud">关于 SealTalk</string>
    <string name="no_read_message">"···"</string>
    <string name="login_success">"登录成功"</string>
    <string name="new_message_notice">开启消息免打扰</string>
    <string name="new_message_show">新消息通知</string>
    <string name="new_message_voice">声音</string>
    <string name="new_message_vibration">震动</string>
    <string name="friend_confirmation">加我好友时需要验证</string>
    <string name="the_blacklist">黑名单</string>
    <string name="join_the_blacklist">加入黑名单</string>
    <string name="blacklist_empty">黑名单为空</string>
    <string name="portrait">头像</string>
    <string name="update_log">更新日志</string>
    <string name="function_introduce">功能介绍</string>
    <string name="version_number">V2.1.0</string>
    <string name="rongcloud_web">官方网站</string>
    <string name="de_notification_start">开始时间</string>
    <string name="de_notification_end">结束时间</string>
    <string name="de_actionbar_myacc">"个人账号"</string>
    <string name="de_actionbar_sub_group">"群组"</string>
    <string name="de_actionbar_sub_private">"我的私人会话"</string>
    <string name="de_actionbar_sub_discussion">"我的讨论组"</string>
    <string name="de_actionbar_sub_system">"系统消息"</string>
    <string name="de_actionbar_sub_defult">"聊天"</string>
    <string name="de_actionbar_set_public">"公众号"</string>
    <string name="de_actionbar_system">"系统消息"</string>
    <string name="de_dialog_item_message_delete">删除消息</string>
    <string name="de_notification_information">开启后，在设定时间段内收到新消息时不会响铃或振动。</string>
    <string name="de_message_at_me">[有人@我]</string>
    <string name="start_chat">发起会话</string>
    <string name="network_not_available">网络不可用</string>
    <string name="login_api_fail">登录请求接口失败</string>
    <string name="sync_userinfo_api_fail">同步用户信息接口请求失败</string>
    <string name="get_token_api_fail">获取 token 请求接口失败</string>
    <string name="phone_or_psw_error">手机或者密码错误</string>
    <string name="phone_number_is_null">手机号不能为空</string>
    <string name="Illegal_phone_number">非法手机号</string>
    <string name="password_is_null">密码不能为空</string>
    <string name="password_cannot_contain_spaces">密码不能包含空格</string>
    <string name="phone_number_available">手机号可用</string>
    <string name="phone_number_has_been_registered">手机号已被注册</string>
    <string name="messge_send">短信已发出,请注意查收</string>
    <string name="message_frequency">短信发送频率超限</string>
    <string name="captcha_overdue">验证码过期,请重新请求</string>
    <string name="verification_code_error">验证码错误</string>
    <string name="register_success">注册成功</string>
    <string name="forgot_password">找回密码</string>
    <string name="new_user">新用户</string>
    <string name="Login">登录</string>
    <string name="phone_number">手机号</string>
    <string name="password">密码</string>
    <string name="nickname">昵称</string>
    <string name="code">短信验证码</string>
    <string name="send_code">发送验证码</string>
    <string name="register">注册</string>
    <string name="confirm_password">确认密码</string>
    <string name="confirm">确认</string>
    <string name="forget_password">忘记密码</string>
    <string name="cancel">取消</string>
    <string name="Done">完成</string>
    <string name="No_friends">暂无好友</string>
    <string name="Search">搜索</string>
    <string name="new_friends">新的朋友</string>
    <string name="group">群组</string>
    <string name="public_service">公众号</string>
    <string name="check_network">请检查网络</string>
    <string name="agreed_friend">已同意好友关系</string>
    <string name="agree">接&#160;&#160;&#160;受</string>
    <string name="request">已请求</string>
    <string name="ignore">已忽略</string>
    <string name="added">已添加</string>
    <string name="deleted">已删除</string>
    <string name="change_password">密码修改</string>
    <string name="select_group_member">选择群组成员</string>
    <string name="remove_group_member">移除群组成员</string>
    <string name="add_group_member">添加群组成员</string>
    <string name="edit_group_name">填写群名称(2-10字)</string>
    <string name="original_password">原密码不能为空</string>
    <string name="new_password_not_null">新密码不能为空</string>
    <string name="confirm_password_not_null">确认密码不能为空</string>
    <string name="original_password_mistake">原密码填写错误</string>
    <string name="passwords_invalid">密码必须为6-16位字符，区分大小写</string>
    <string name="passwords_do_not_match">填写的确认密码与新密码不一致</string>
    <string name="original_password_text">初始密码</string>
    <string name="new_password">新密码</string>
    <string name="confirm_new_password">确认新密码</string>
    <string name="group_info">群组信息</string>
    <string name="group_member_size">全部群成员</string>
    <string name="group_name">群名称</string>
    <string name="confirm_quit_group">确认退出群组?</string>
    <string name="confirm_dismiss_group">确认解散群组?</string>
    <string name="set_top">会话置顶</string>
    <string name="message_notice">消息免打扰</string>
    <string name="search_message">查找聊天记录</string>
    <string name="clean_message">清除聊天记录</string>
    <string name="quit_group">删除并退出</string>
    <string name="dismiss_group">解散并退出</string>
    <string name="user_details">用户详情</string>
    <string name="black_state">黑名单状态</string>
    <string name="my_groups">群组</string>
    <string name="code_is_null">验证码为空</string>
    <string name="name_is_null">昵称不能为空</string>
    <string name="name_contain_spaces">昵称不能包含空格</string>
    <string name="remove_group_members">确认移除以下群成员?</string>
    <string name="add_successful">添加成功</string>
    <string name="remove_successful">移除成功</string>
    <string name="least_one_friend">至少选择一位好友</string>
    <string name="not_send_code">未向服务端获取验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="clear_success">清除成功</string>
    <string name="clear_failure">清除失败</string>
    <string name="new_group_name">新的群名称</string>
    <string name="update_success">更改成功</string>
    <string name="quit_success">退出成功</string>
    <string name="dismiss_success">解散成功</string>
    <string name="group_name_not_is_null">群组昵称不能为空</string>
    <string name="group_name_size_is_one">群名称不少于2个字</string>
    <string name="create_group_success">群组创建成功</string>
    <string name="group_header_api_fail">群组头像接口请求失败</string>
    <string name="group_create_api_fail">群组创建接口请求失败</string>
    <string name="upload_portrait_failed">上传头像失败</string>
    <string name="phone_unregister">此号码未被注册</string>
    <string name="group_portrait">群头像</string>
    <string name="add_friend">加为好友</string>
    <string name="add_text">加好友信息...</string>
    <string name="request_success">请求成功</string>
    <string name="portrait_update_success">头像更新成功</string>
    <string name="chat">会话</string>
    <string name="contacts">通讯录</string>
    <string name="discover">发现</string>
    <string name="me">我</string>
    <string name="mine_about">关于 SealTalk</string>
    <string name="my_wallet">我的钱包</string>
    <string name="mine_service">意见反馈</string>
    <string name="mine_setting">账号设置</string>
    <string name="account_setting">账号设置</string>
    <string name="exit_login">退出登录</string>
    <string name="clear_cache">清除缓存</string>
    <string name="privacy">隐私</string>
    <string name="new_message">接收新消息通知</string>
    <string name="message_show_details">通知显示消息详情</string>
    <string name="fetching">获取中……</string>
    <string name="prompt">提示</string>
    <string name="all_group_member">全部群成员</string>
    <string name="group_member_online_status">群成员在线状态</string>
    <string name="group_announcement">群公告</string>
    <string name="group_code">群二维码</string>
    <string name="total_member">群成员</string>
    <string name="select_contact">选择联系人</string>
    <string name="current_password">原密码</string>
    <string name="password_hint">6-16个字符,区分大小写</string>
    <string name="start_voice">语音通话</string>
    <string name="start_video">视频聊天</string>
    <string name="browser_download">浏览器打开</string>
    <string name="loacation_download">本地下载</string>
    <string name="update_app_model_prepare">准备下载</string>
    <string name="update_app_model_progress">正在下载 %1$d%2$s</string>
    <string name="update_app_model_success">下载成功(点击安装)</string>
    <string name="update_app_model_error">下载失败(点击浏览器下载)</string>
    <string name="downloading_apk">正在后台下载...</string>
    <string name="empty_group_notice">请编辑群公告</string>
    <string name="group_notice_exist_confirm">退出本次编辑</string>
    <string name="group_notice_post_confirm">该公告会通知全部群成员，是否发布？</string>
    <string name="group_notice_prefix">\@所有人\n</string>
    <string name="search_friend">添加好友</string>
    <string name="setdisplayname">设置备注</string>
    <string name="new_and_old_password">新旧密码一致</string>
    <string name="new_message_notice_title">消息免打扰</string>
    <string name="other_devices_text">您的账号在别的设备上登录，您被迫下线!</string>
    <string name="i_know">知道了</string>
    <string name="update_name">昵称更改</string>
    <string name="ac_search_no_result_pre">没有搜到</string>
    <string name="ac_search_no_result_suffix">相关的信息</string>
    <string name="ac_search_chat_detail">共%1$d条与</string>
    <string name="ac_search_chat_detail_three">相关的聊天记录</string>
    <string name="ac_search_nick_name">昵称： </string>
    <string name="ac_contact_nick_name">昵称:</string>
    <string name="ac_search_friend">联系人</string>
    <string name="ac_search_group">群组</string>
    <string name="ac_search_chatting_records">聊天记录</string>
    <string name="ac_search_more_friend">查看更多联系人</string>
    <string name="ac_search_more_group">查看更多群组</string>
    <string name="ac_search_more_chatting_records">查看更多聊天记录</string>
    <string name="search_item_chat_records">%d条相关记录</string>
    <string name="offline">离线</string>
    <string name="pc_online">电脑在线</string>
    <string name="phone_online">手机在线</string>
    <string name="ipad_online">iPad 在线</string>
    <string name="imac_online">iMac 在线</string>
    <string name="set_user_online_status">设置用户在线状态</string>
    <string name="read_receipt_detail">回执详情</string>
    <string name="read_receipt_unread_persons">%1$d人未读</string>
    <string name="read_receipt_read_persons">%1$d人已读</string>
    <string name="read_receipt_no_person_read">全部未读</string>
    <string name="read_receipt_no_person_unread">全部已读</string>
    <string name="des_add_friend_to_black_list">你将不再收到对方的消息</string>
    <string name="clean_private_chat_history">确定删除聊天记录吗</string>
    <string name="clean_group_chat_history">确定删除群聊天记录吗</string>
    <string name="clean_discussion_chat_history">确定删除讨论组聊天记录吗</string>
    <string name="join_chat_room_error_toast">聊天室 ID 为空,请稍后重试</string>
    <string name="activity_detail_discussion_to_top">置顶</string>
    <string name="activity_detail_discussion_not_disturb">消息免打扰</string>
    <string name="ac_about_seal_talk_version">SealTalk 版本</string>
    <string name="ac_about_sdk_version">SDK 版本</string>
    <string name="ac_about_shut_down_debug_mode">关闭 debug 模式</string>
    <string name="ac_detail_discussion_member_size">讨论组成员()</string>
    <string name="ac_detail_discussion_clear_messages">清空聊天信息</string>
    <string name="ac_detail_discussion_group_display_name">群组昵称</string>
    <string name="ac_detail_discussion_start_chat">发起聊天</string>
    <string name="ac_detail_discussion_delete_and_quit_discussion">删除并退出讨论组</string>
    <string name="ac_detail_discussion_dismiss_group">解散群组</string>
    <string name="share_dialog_share">分享</string>
    <string name="share_dialog_cancel">取消</string>
    <string name="share_dialog_hint">说些什么</string>
    <string name="share_dialog_from">来自：UC 浏览器</string>
    <string name="dialog_bottom_picture">拍照</string>
    <string name="dialog_bottom_import_from_local">从本地导入</string>
    <string name="ac_note_info_name">备注名</string>
    <string name="ac_note_info">备注信息</string>
    <string name="ac_note_info_save">保存</string>
</resources>