<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#ffffff"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/prompt"
            android:textColor="#000"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="2dp"
            android:text="@string/other_devices_text"
            android:textColor="#000" />


        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/de_title_bg" />

        <TextView
            android:id="@+id/ok"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/bg_white_aaaaaa"
            android:gravity="center"
            android:text="@string/i_know"
            android:textColor="@color/de_title_bg"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>