<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/seal_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:background="#0195ff">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:drawableLeft="@drawable/de_actionbar_back"
            android:onClick="finishPage"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/ac_note_info"
            android:textColor="#fff"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/notesave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="14dp"
            android:text="@string/ac_note_info_save"
            android:textColor="#9fcdfd" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="28dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ac_note_info_name"
            android:textColor="#999"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/notetext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:maxLength="16"
            android:maxLines="1" />


    </LinearLayout>

</LinearLayout>